src/test/deca/context/invalid/method_wrong_return_type.deca
/*
    Description : Méthode retournant un booléen alors que figure int dans sa signature

    Résultat : Erreur contextuelle
*/
class C{
    int y(){
        boolean b = true;
        return b;
    }
}
